<resources>

    <string name="app_name">Mrpoid</string>
    <string name="settings">设置</string>
    <string name="close">关闭</string>
    <string name="other">其他</string>
    <string name="feedback">反馈</string>
    <string name="usefull_set">常用设置</string>
    <string name="detail_set">详细设置</string>
    <string name="foce_close">强制关闭</string>
    <string name="keypad_layout">键盘布局</string>
    <string name="remove">删除</string>
    <string name="remove_fail">删除失败！</string>
    <string name="option">选项</string>
    <string name="refresh">刷新</string>
    <string name="scnshot">截屏</string>
    <string name="size">大小</string>
    <string name="title_activity_filex">应用列表</string>
    <string name="mem_size">虚拟机内存</string>
    <string name="home">根目录</string>
    <string name="up">上级</string>
    <string name="set_background">设置背景</string>
    <string name="ok">确定</string>
    <string name="accept">接受</string>
    <string name="refused">拒绝</string>
    <string name="include_dir">包括目录</string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="pad_opacity">键盘透明度</string>
    <string name="switch_keypad">切换键盘</string>
    <string name="color">纯色</string>
    <string name="image">图片</string>
    <string name="login">登陆</string>
    <string name="help">帮助</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="menu">菜单</string>
    <string name="theme">主题</string>
    <string name="light">浅色</string>
    <string name="hint">温馨提示</string>
    <string name="warn">警告</string>
    <string name="dark">深色</string>
    <string name="float_view">浮动窗口</string>
    <string name="create_shortcut">创建桌面快捷方式</string>
    <string name="cpoy_right"></string>
    <string name="error0">加载 emulator.so 失败！可能是您的系统不支持！</string>
    <string name="video_settings">显示设置</string>
    <string name="scaling_mode">缩放模式</string>
    <string name="scaling_mode_summery">显示在屏幕上的大小</string>
    <string name="update_settings">更新设置</string>
    <string name="auto_update">自动更新</string>
    <string name="auto_update_sum">每周检测一次新版本</string>
    <string name="check_update">立即检测</string>
    <string name="check_update_sum">手动检测最新版本</string>
    <string name="enable_vkeypad">虚拟键盘</string>
    <string name="input_settings">输入设置</string>
    <string name="other_settings">高级设置</string>
    <string name="log_settings">日志设置</string>
    <string name="show_log">显示日志</string>
    <string name="show_log_sum">在 Logcat 中显示 mrp API 调用日志</string>
    <string name="log_filter">日志过滤器</string>
    <string name="log_filter_sum">选择要显示的日志类型</string>
    <string name="log_input">事件输入</string>
    <string name="log_file">文件I/O</string>
    <string name="log_net">网络</string>
    <string name="log_mrplat">mr_plat/mr_platEx</string>
    <string name="log_timer">定时器</string>
    <string name="log_fw">框架</string>
    <string name="log_mrprintf">mr_printf</string>
    <string name="platscreenbuf">系统屏幕缓冲</string>
    <string name="platscreenbuf_summery">开启可以才可使用系统字体</string>
    <string name="platdrawchar">使用系统字体</string>
    <string name="platdrawchar_summery">使用系统字体作为 mrp 字体</string>
    <string name="enableAntiAtial">开启画布抗锯齿</string>
    <string name="enableAntiAtial_summery">模糊像素点，看起来更舒服</string>
    <string name="orientation">屏幕方向</string>
    <string name="screensize">屏幕尺寸</string>
    <string name="screensize_summery">模拟 MTK 手机屏幕尺寸</string>
    <string name="version">版本</string>
    <string name="version_summery">1.0-20130213-NIGHTLY</string>
    <string name="changelog">变更日志</string>
    <string name="hint_again_to_exit">再按一次退出！</string>
    <string name="mythroad_path">设置mythroad路径</string>
    <string name="sdpath">设置SD卡路径</string>
    <string name="sdpath_msg">正确格式  "/mnt/sdcard/"</string>
    <string name="show_statusbar">显示状态栏</string>
    <string name="no_key">我手机没按键</string>
    <string name="show_mem_info">显示内存信息</string>
    <string name="no_key_sum">当手机没有任何按键时需要改变一些操作习惯，比如 Nexus 系列！</string>
    <string name="show_statusbar_sum">显示系统状态栏</string>
    <string name="hint_click_to_back">点击返回</string>
    <string name="fullscn_editor">全屏编辑框</string>
    <string name="catch_volumekey">捕获音量键</string>
    <string name="catch_volumekey_sum">音量键作为上下键</string>
    <string name="enable_exram">启用拓展内存</string>
    <string name="enable_exram_sum">有些游戏需要拓展内存，开启后闪退的可能性会增加！</string>
    <string name="limit_input_length">输入字数限制</string>
    <string name="limit_input_length_sum">若不限制闪退的可能性会增加！</string>
    <string name="platform">平台</string>
    <string name="platform_sum">若闪退请改为 Linux.</string>
    <string name="thread">线程模式</string>
    <string name="thread_sum">若闪退请改为 主线程.</string>
    <string name="dpad_at_left">方向键盘在左边</string>
    <string name="title_memory">内存设置</string>
    <string name="title_paths">路径设置</string>
    <string name="run_under_multi_path">不同分辨率不同路径</string>
    <string name="run_under_multi_path_sum">选择不同分辨率时在不同路径下运行，避免不全屏问题。</string>
    <string name="show_float_button">显示浮动按钮</string>
    <string name="float_button_func">浮动按钮功能</string>

    <string-array name="float_button_func_entries">
        <item>菜单</item>
        <item>缩放模式</item>
    </string-array>
    <string-array name="scaling_mode_entries">
        <item>全屏</item>
        <item>适应屏幕</item>
        <item>x2</item>
        <item>原始大小</item>
    </string-array>
    <string-array name="screensize_entries">
        <item>176x220</item>
        <item>240x320</item>
        <item>240x400</item>
        <item>320x480</item>
        <item>320x240</item>
        <item>480x800</item>
    </string-array>

    <string name="def_screensize">240x320</string>

    <string-array name="memsize_entries">
        <item>1 M</item>
        <item>2 M</item>
        <item>4 M</item>
    </string-array>

</resources>